src/objects/Contests__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contests</relationshipLabel>
        <relationshipName>Contests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contests_Date__c</fullName>
        <label>Contests_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contests_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contests ID</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contests_Rank__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contests_Rank</label>
        <precision>7</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contests_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contests_Total</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contests</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contests Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>